ch08/SimplePOD.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: basic-examples
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-demo  
  namespace: basic-examples
  labels:
    app: myapp
spec:
  containers:
  - name: myapp
    image: alpine:latest
    command: ['sh', '-c', 'while true; do echo $(date) >> /opt/logs.txt; sleep 1; done']
    volumeMounts:
    - name: data
      mountPath: /opt
  volumes:
  - name: data
    emptyDir: {}
