ch08/IngressExampleDeployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: helloworldingress
  namespace: basic-examples
  labels:
    app: helloworldingress
spec:
  selector:
    matchLabels:
      app: helloworldingress
  replicas: 2
  template:
    metadata:
      labels:
        app: helloworldingress
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:1.0
        name: hello-app
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: helloworldingress-service
  namespace: basic-examples
spec:
  selector:
    app: helloworldingress
  ports:
  - name: http
    port: 8080
    targetPort: 8080
